--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-pyuac==0.15.2
-watchdog==2.1.3
-requests==2.26.0
-Pillow==8.3.1
-tkinter
-pystray==0.15.1
-ttkbootstrap==0.5.2
+pyuac==0.0.3
+watchdog==3.0.0
+requests==2.31.0
+Pillow==9.5.0
+pystray==0.19.4
+ttkbootstrap==1.10.1
+ttkthemes==3.2.2
+pypiwin32==223
+pywin32==306
